Closed Bug 1594938 Opened 5 years ago Closed 5 years ago

Crash in [@ nsSHistory::Reload]

Categories

(Core :: DOM: Navigation, defect, P1)

72 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla72
Fission Milestone M5
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- unaffected
firefox72 + fixed

People

(Reporter: marcia, Assigned: peterv)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-9a4e61c6-5792-40c5-ab3a-632580191107.

Seen while looking at nightly crash stats - crashes started in 20191107094905: https://bit.ly/36MvuBd. 15 crashes/3 installs on Windows and macOS so far.

Code was touched in Bug 1438272. ni on :peterv

Top 10 frames of crashing thread:

0 xul.dll nsresult nsSHistory::Reload docshell/shistory/nsSHistory.cpp:846
1 xul.dll mozilla::dom::ChildSHistory::Reload docshell/shistory/ChildSHistory.cpp:51
2 xul.dll static bool mozilla::dom::ChildSHistory_Binding::reload dom/bindings/ChildSHistoryBinding.cpp:191
3 xul.dll mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy, mozilla::dom::binding_detail::ThrowExceptions> dom/bindings/BindingUtils.cpp:3218
4 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:548
5 xul.dll static bool Interpret js/src/vm/Interpreter.cpp:3110
6 xul.dll static bool js::RunScript js/src/vm/Interpreter.cpp:423
7 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:589
8 xul.dll JS::Call js/src/jsapi.cpp:2718
9 xul.dll mozilla::dom::MessageListener::ReceiveMessage dom/bindings/MessageManagerBinding.cpp:6864

Hmm, null+offset crash I think

Forgot to add peterv in the ni. #10 crash overall on nightly and is happening consistently in each build.

Flags: needinfo?(peterv)

I guess if the OnHistoryReload listener causes us to not navigate we shouldn't be calling LoadURI.

Assignee: nobody → peterv
Status: NEW → ASSIGNED
Fission Milestone: --- → M5
Priority: -- → P1
Pushed by pvanderbeken@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8157c99955b1
Crash in [@ nsSHistory::Reload]. r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Flags: needinfo?(peterv)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: