Bug 1594938 - Crash in [@ nsSHistory::Reload]. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D53010