docshell/shistory/nsSHistory.cpp
@@ -837,15 +837,21 @@ static nsresult LoadURI(nsSHistory::LoadEntryResult& aLoadResult) {
 
 NS_IMETHODIMP
 nsSHistory::Reload(uint32_t aReloadFlags) {
-  LoadEntryResult loadResult;
+  Maybe<LoadEntryResult> loadResult;
   nsresult rv = Reload(aReloadFlags, loadResult);
   NS_ENSURE_SUCCESS(rv, rv);
 
-  return LoadURI(loadResult);
+  if (!loadResult) {
+    return NS_OK;
+  }
+
+  return LoadURI(loadResult.ref());
 }
 
 nsresult nsSHistory::Reload(uint32_t aReloadFlags,
-                            LoadEntryResult& aLoadResult) {
+                            Maybe<LoadEntryResult>& aLoadResult) {
+  MOZ_ASSERT(!aLoadResult.isSome());
+
   uint32_t loadType;
   if (aReloadFlags & nsIWebNavigation::LOAD_FLAGS_BYPASS_PROXY &&
       aReloadFlags & nsIWebNavigation::LOAD_FLAGS_BYPASS_CACHE) {
@@ -872,7 +878,14 @@ nsresult nsSHistory::Reload(uint32_t aReloadFlags,
     return NS_OK;
   }
 
-  return LoadEntry(mIndex, loadType, HIST_CMD_RELOAD, aLoadResult);
+  aLoadResult.emplace();
+  nsresult rv = LoadEntry(mIndex, loadType, HIST_CMD_RELOAD, aLoadResult.ref());
+  if (NS_FAILED(rv)) {
+    aLoadResult.reset();
+    return rv;
+  }
+
+  return NS_OK;
 }
 
 NS_IMETHODIMP
